--- a/appnproylogico/templates/asignaciones/agregar-asignacion-mf.html
+++ b/appnproylogico/templates/asignaciones/agregar-asignacion-mf.html
@@ -34,7 +34,7 @@
       <div class="card-body">
         <form class="row g-3" method="get">
           <div class="col-md-8">
-            <label class="form-label" for="search-asign-mf">Buscar</label>
+            8for="search-asign-mf">Buscar</label>
             <input id="search-asign-mf" class="form-control" type="text" name="search" value="{{ search_query }}" placeholder="Buscar por motorista o farmacia">
           </div>
           <div class="col-md-2">
